<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="player_track_information">Track information</string>
    <string name="player_open_track_information">Open track information</string>
    <string name="player_track_info_track">Track</string>
    <string name="player_track_info_file">File</string>
    <string name="player_track_info_audio">Audio (source file)</string>
    <string name="player_track_info_filename">Filename</string>
    <string name="player_track_info_file_size">File size</string>
    <string name="player_track_info_location">Location</string>
    <string name="player_track_info_format">Format / container</string>
    <string name="player_track_info_codec">Codec</string>
...
